--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Agro App",
+  "name": "Agrotourism Template App",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,9 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo144.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "144x144 72x72 57x57"
     },
     {
       "src": "logo512.png",
