--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agro-app",
   "version": "0.1.0",
+  "homepage": "http://pbochenek.dgsm.pl/agro",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
@@ -39,6 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "."
+  }
 }
